Underscores in header names cause problems, replaced
